# web-scraper

./: .gitignore  README  README.md  build.sh  data.tsv  pyproject.toml  run.sh  shell.nix  urls.txt
scraper/: get_product_urls.py  scrape_product_pages.py
